--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Clare Laycock Coaching"
+    <meta name="description" content="Clare Laycock Coaching" />
     <title>Clare Laycock Coaching</title>
   </head>
   <body>
