--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      @font-face { font-family: LeagueSpartan; src: url("LeagueSpartan-VariableFont_wght.ttf"); }
+      @font-face { font-family: Quicksand; src: url("Quicksand-VariableFont_wght.ttf"); }
+    </style>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
