--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Clare Laycock Coaching" />
-    <link rel="preload" as="image" href="../src/images/intro.jpg" />
+    <link rel="preload" as="image" href="../src/images/intro-new.jpg" />
     <title>Clare Laycock Coaching</title>
   </head>
   <body>
